# ViInfographicVQA

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: test.json
ft-vlm/: fine_tuning_vlm_trl.ipynb  pyproject.toml  run_inference_test.sh
ft-vlm/configs/: train_chartqa.json  train_chartqa_cpu.json  train_local.json  train_qwen25vl_3b_local.json  train_qwen25vl_3b_mixed_full.json  train_qwen25vl_3b_mixed_lora.json  train_qwen25vl_3b_multi_full.json  train_qwen25vl_3b_multi_lora.json  train_qwen25vl_3b_single_full.json  train_qwen25vl_3b_single_lora.json  train_qwen25vl_7b_local.json  train_qwen25vl_7b_multi_image.json  train_qwen25vl_7b_multi_image_merge.json  train_qwen25vl_8b_local.json
ft-vlm/src/ft_vlm/dataset/: chartqa.py  dump_datasets.py  local_json.py
ft-vlm/src/ft_vlm/dataset/dump_multi_image/: train.json
ft-vlm/src/ft_vlm/fine_tuning/: collator.py  train.py
ft-vlm/src/ft_vlm/inference/: run.py
ft-vlm/src/ft_vlm/model/: qwen2_vl.py
ft-vlm/tests/: test_imports.py
results/multi/: Qwen2.5-VL-7B-Instruct.json
results/single/: Qwen2.5-VL-7B-Instruct.json
src/: __init__.py  config.py
src/common/: __init__.py  metrics.py  utils.py
src/inference/: __init__.py
src/inference/multi/: __init__.py  __main__.py  calculate_scores.py  run_inference.py
src/inference/multi/models/: __init__.py  aya_vision.py  base_model.py  internvl.py  llava.py  minicpm.py  molmo.py  ovis.py  phi.py  qwenvl.py  utils.py
src/inference/single/: __init__.py  __main__.py  calculate_scores.py  run_inference.py
src/inference/single/models/: __init__.py  base_model.py  internvl.py  minicpm.py  molmo.py  ovis.py  phi.py  qwenvl.py  utils.py  videollama.py
